--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
         <h3>Daily challenge</h3>
         <div id="challengeContent">Loading...</div>
       </section>
-    <section id="activitiesSection" style="padding:1rem;border-radius:8px;box-shadow:0 4px 12px rgba(2,6,23,0.06);margin-bottom:1rem">
-          <h3>Activities</h3>
-          <ul id="activities" style="margin:0;padding:0 0 0 1rem"></ul>
-        </section>
+  <!-- Activities list removed per user request -->
   <section id="packing" style="padding:1rem;border-radius:8px;box-shadow:0 4px 12px rgba(2,6,23,0.04)">
   <h3>Packing checklist</h3>
   <div id="packingTitle" style="font-size:.95rem;margin-bottom:.5rem">Active checklist: <strong id="packingName">(none)</strong></div>
